# kaavoitus-api

./: .dockerignore  .gitignore  .rancher-pipeline.yaml  Container.md  Dockerfile  Dockerfile.dev  Dockerfile.test  Makefile  README.md  azure-pipelines-master.yml  azure-pipelines-release.yml  bitbucket-pipelines.yml  conftest.py  da  dc  docker-compose.yml  keydb.conf  manage.py  pyproject.toml  setup.cfg  setup.py
Deployment/owslib/: owslib.patch
api-schema/: README.md  schema-v1.yaml  schema.yaml
api_project/: asgi.py  gunicorn_config.py  helpers.py  settings.py  urls.py  utils.py  views.py  wsgi.py
common_auth/: admin.py  apps.py
common_auth/authentication/: __init__.py  token_authentication.py
common_auth/migrations/: 0001_initial.py  0002_auto_20210104_1001.py  0003_extauthcred_host_spec.py  0004_auto_20210426_0755.py
common_auth/models/: __init__.py  ext_auth_cred.py  token_auth.py
common_auth/tests/: fixtures.py  mock.py  test_auth.py
db/: readme
deploy/rancher/: deploy_staging_api.sh  deployment.yaml
facta_api/: apps.py  tests.py  urls.py
facta_api/hel_facta/: Oracle connection.md  __init__.py  kaava.py  kiinteisto.py  kiinteiston_haltijat.py  kiinteiston_omistajat.py  rakennuksen_omistajat.py  rakennuskiellot.py
facta_api/views/: __init__.py  kiinteisto_all.py  kiinteiston_haltijat.py  (+2 more)
geoserver_api/: apps.py  urls.py
hel_api/: apps.py  urls.py
kaavapino_api/: apps.py  models.py  urls.py  views.py
pipelines/: kaavoitus-api-dev.yml  kaavoitus-api-devtest.yml  kaavoitus-api-release.yml  kaavoitus-api-review.yml
(+161 files in other folders)
