[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.poetry]
name = "Kaavoitus-API"
version = "0.1.0"
description = "Kaavoitus API"

authors = [
    "Helsingin Kaupunki"
]

readme = ["README", "LICENSE"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.11"
django = "3.1.6"
django-environ = "0.4.5"
djangorestframework = "3.12.2"
django-extensions = "3.1.1"
drf_spectacular = "0.13.2"
owslib = "0.22.0"
lxml = "4.6.2"
pydov = "2.0.0"
psycopg2 = "2.9.2"
cx_Oracle = "8.1.0"
gunicorn = "20.0.4"
numpy = "1.23.4"
geojson = "2.5.0"
GDAL = "3.0.4"
sentry-sdk = "1.5.6"
elastic-apm = "6.8.1"
django-redis = "5.2.0"

[tool.poetry.group.dev.dependencies]
black = "22.12.0"
flake8 = "5.0.4"
flake8-print = "5.0.0"
pytest = "7.2.1"
pytest-cov = "4.0.0"
pytest-django = "4.5.2"